1.5/_sources/modules/generated/sklearn.feature_extraction.DictVectorizer.rst.txt
DictVectorizer
==============

.. currentmodule:: sklearn.feature_extraction

.. autoclass:: DictVectorizer
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.feature_extraction.DictVectorizer sklearn.feature_extraction.DictVectorizer.__init__ sklearn.feature_extraction.DictVectorizer.fit sklearn.feature_extraction.DictVectorizer.fit_transform sklearn.feature_extraction.DictVectorizer.get_feature_names_out sklearn.feature_extraction.DictVectorizer.get_metadata_routing sklearn.feature_extraction.DictVectorizer.get_params sklearn.feature_extraction.DictVectorizer.inverse_transform sklearn.feature_extraction.DictVectorizer.restrict sklearn.feature_extraction.DictVectorizer.set_inverse_transform_request sklearn.feature_extraction.DictVectorizer.set_output sklearn.feature_extraction.DictVectorizer.set_params sklearn.feature_extraction.DictVectorizer.transform 
   :add-heading: Gallery examples
   :heading-level: -