1.7/_sources/modules/generated/sklearn.feature_extraction.DictVectorizer.rst.txt
DictVectorizer
==============

.. currentmodule:: sklearn.feature_extraction

.. autoclass:: DictVectorizer
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.feature_extraction.DictVectorizer sklearn.feature_extraction.DictVectorizer.__delattr__ sklearn.feature_extraction.DictVectorizer.__dir__ sklearn.feature_extraction.DictVectorizer.__eq__ sklearn.feature_extraction.DictVectorizer.__format__ sklearn.feature_extraction.DictVectorizer.__ge__ sklearn.feature_extraction.DictVectorizer.__getattribute__ sklearn.feature_extraction.DictVectorizer.__getstate__ sklearn.feature_extraction.DictVectorizer.__gt__ sklearn.feature_extraction.DictVectorizer.__hash__ sklearn.feature_extraction.DictVectorizer.__init__ sklearn.feature_extraction.DictVectorizer.__init_subclass__ sklearn.feature_extraction.DictVectorizer.__le__ sklearn.feature_extraction.DictVectorizer.__lt__ sklearn.feature_extraction.DictVectorizer.__ne__ sklearn.feature_extraction.DictVectorizer.__new__ sklearn.feature_extraction.DictVectorizer.__reduce__ sklearn.feature_extraction.DictVectorizer.__reduce_ex__ sklearn.feature_extraction.DictVectorizer.__repr__ sklearn.feature_extraction.DictVectorizer.__setattr__ sklearn.feature_extraction.DictVectorizer.__setstate__ sklearn.feature_extraction.DictVectorizer.__sizeof__ sklearn.feature_extraction.DictVectorizer.__sklearn_clone__ sklearn.feature_extraction.DictVectorizer.__sklearn_tags__ sklearn.feature_extraction.DictVectorizer.__str__ sklearn.feature_extraction.DictVectorizer.__subclasshook__ sklearn.feature_extraction.DictVectorizer._add_iterable_element sklearn.feature_extraction.DictVectorizer._build_request_for_signature sklearn.feature_extraction.DictVectorizer._get_default_requests sklearn.feature_extraction.DictVectorizer._get_doc_link sklearn.feature_extraction.DictVectorizer._get_metadata_request sklearn.feature_extraction.DictVectorizer._get_param_names sklearn.feature_extraction.DictVectorizer._get_params_html sklearn.feature_extraction.DictVectorizer._html_repr sklearn.feature_extraction.DictVectorizer._repr_html_inner sklearn.feature_extraction.DictVectorizer._repr_mimebundle_ sklearn.feature_extraction.DictVectorizer._transform sklearn.feature_extraction.DictVectorizer._validate_params sklearn.feature_extraction.DictVectorizer.fit sklearn.feature_extraction.DictVectorizer.fit_transform sklearn.feature_extraction.DictVectorizer.get_feature_names_out sklearn.feature_extraction.DictVectorizer.get_metadata_routing sklearn.feature_extraction.DictVectorizer.get_params sklearn.feature_extraction.DictVectorizer.inverse_transform sklearn.feature_extraction.DictVectorizer.restrict sklearn.feature_extraction.DictVectorizer.set_output sklearn.feature_extraction.DictVectorizer.set_params sklearn.feature_extraction.DictVectorizer.transform 
   :add-heading: Gallery examples
   :heading-level: -